--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
-h6 {
-    display: list-item;
+#header {
+    background: darkred;
+    width: 715px;
+    height: 100px;
+}
+
+#menu {
+    background: oldlace;
+    width: 190px;
+    height: 300px;
+}
+
+#content {
+    background: oldlace;
+    width: 525px;
+    height: 300px;
+}
+
+#footer {
+    background: darkred;
+    width: 715px;
+    height: 30px;
 }
