--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
     background: oldlace;
     width: 525px;
     height: 300px;
+    position: absolute;
+    left: 190px;
+    top: 100px;
 }
 
 #footer {
