--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 #header {
     background: darkred;
     width: 715px;
@@ -17,6 +21,15 @@
     position: absolute;
     left: 190px;
     top: 100px;
+}
+
+#news {
+    background: yellow;
+    width: 150px;
+    height: 280px;
+    position: absolute;
+    left: 365px;
+    top: 10px;
 }
 
 #footer {
