--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,11 @@
     height: 50px; 
     float: right;  
 }
+
+#block2 {
+    border: 1px solid red;
+    width: 150px;
+    height: 50px;
+    float: right;
+    clear: right;
+}
