--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,38 @@
-#block1 {
-    border: 1px solid red;
-    width: 150px;
-    height: 50px; 
-    float: right;  
+#header {
+    background: darkred;
+    width: 715px;
+    height: 100px;
 }
 
-#block2 {
-    border: 1px solid red;
+#menu {
+    background: oldlace;
+    width: 190px;
+    height: 300px;
+    float: left;
+}
+
+#content {
+    background: oldlace;
+    width: 525px;
+    height: 300px;
+    position: absolute;
+    left: 190px;
+    top: 100px;
+    float: left;
+}
+
+#news {
+    background: yellow;
     width: 150px;
-    height: 50px;
+    height: 280px;
+    position: absolute;
+    left: 365px;
     float: right;
-    clear: right;
+    margin: 10px;
+}
+
+#footer {
+    background: darkred;
+    width: 715px;
+    height: 30px;
 }
